--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,18 +2,16 @@ server {
     listen 80;
 
     # location / {
-    #     proxy_pass http://service1:5555;  # Замените service1 и port на имя и порт вашего первого сервиса
+    #     proxy_pass http://frontend:3000;
     #     proxy_set_header Host $host;
     #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_set_header X-Forwarded-Proto $scheme;
     # }
 
-    # location /service2 {
-    #     proxy_pass http://service2:4444;  # Замените service2 и port на имя и порт вашего второго сервиса
+    # location /api/ {
+    #     proxy_pass http://backend:8080;
     #     proxy_set_header Host $host;
     #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_set_header X-Forwarded-Proto $scheme;
     # }
 
