--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,6 +119,21 @@ services:
       - kafka
       - zookeeper
 
+  mongo-ui:
+    image: mongo-express:latest
+    ports:
+      - "8081:8081"
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=admin123
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_BASICAUTH_USERNAME=admin
+      - ME_CONFIG_BASICAUTH_PASSWORD=admin123
+    networks:
+      - app-network
+    depends_on:
+      - mongodb
+
 networks:
   app-network:
     driver: bridge
@@ -128,3 +143,4 @@ volumes:
   mongodb_data:
   kafka_data:
   pgadmin_data:
+  mongo_express_data:
