--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,12 +1,21 @@
 server {
     listen 80;
 
-    # location / {
-    #     proxy_pass http://frontend:3000;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
+    location / {
+        proxy_pass http://frontend:5173;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Таймауты
+        proxy_read_timeout 120s;
+        proxy_connect_timeout 120s;
+    }
 
     # location /api/ {
     #     proxy_pass http://backend:8080;
@@ -14,6 +23,4 @@ server {
     #     proxy_set_header X-Real-IP $remote_addr;
     #     proxy_set_header X-Forwarded-Proto $scheme;
     # }
-
-    # Добавьте дополнительные блоки location для других сервисов по мере необходимости
 }
