--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -17,10 +17,10 @@ server {
         proxy_connect_timeout 120s;
     }
 
-    # location /api/ {
-    #     proxy_pass http://backend:8080;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
+    location /api/users {
+        proxy_pass http://user_service:1111;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
