--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
 
+    # frontend
     location / {
         proxy_pass http://frontend:5173;
         proxy_http_version 1.1;
@@ -17,6 +18,7 @@ server {
         proxy_connect_timeout 120s;
     }
 
+    # user service
     location /api/users {
         proxy_pass http://user_service:8080;
         proxy_set_header Host $host;
