--- a/user-service/package.json
+++ b/user-service/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "pg": "^8.14.0",
