--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -14,8 +14,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api/users {
-        proxy_pass http://user_service:8000/api/users;  # Обновлён host и порт
+    location /api/user {
+        proxy_pass http://user_service:8000/api/user;  # Обновлён host и порт
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
