Parcer update Ошибка парсинга событий:не удалось получить данные. Проверьте селекторы или убедитесь, что сайт доступен

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,10 +173,13 @@ services:
     build:
       context: ./parser-service
       dockerfile: Dockerfile
+    environment:
+      - CHROME_BIN=/usr/bin/google-chrome
     depends_on:
       - mongodb
     networks:
       - app-network
+    shm_size: 2gb
     # Если требуется периодический запуск, можно изменить команду:
     # command: sh -c "while true; do ./parser; sleep 3600; done"
 
