--- a/parser-service/Dockerfile
+++ b/parser-service/Dockerfile
@@ -1,48 +1,21 @@
-# Используем образ Golang
+# Билд-этап (сборка бинарника)
 FROM golang:1.24.1 AS builder
 
 WORKDIR /app
 
-# Устанавливаем зависимости
 COPY go.mod go.sum ./
 RUN go mod download
 
-# Копируем исходный код
 COPY . .
 
-# Собираем бинарный файл
-RUN CGO_ENABLED=0 GOOS=linux go build -o parser .
+# Сборка статически связанного бинарника
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o parser
 
-# Создаём финальный контейнер
-FROM ubuntu:latest
+# Финальный образ
+FROM alpine:latest
 
-WORKDIR /app
+WORKDIR /root/
 
-# Устанавливаем необходимые пакеты
-RUN apt-get update && apt-get install -y \
-    wget \
-    curl \
-    unzip \
-    ca-certificates \
-    libx11-xcb1 \
-    libxcomposite1 \
-    libxcursor1 \
-    libxi6 \
-    libxrandr2 \
-    libxss1 \
-    libxtst6 \
-    fonts-liberation \
-    libappindicator3-1 \
-    xdg-utils \
-    && rm -rf /var/lib/apt/lists/*
+COPY --from=builder /app/parser .
 
-# Устанавливаем Google Chrome
-RUN wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
-    apt-get update && apt-get install -y ./google-chrome-stable_current_amd64.deb && \
-    rm google-chrome-stable_current_amd64.deb
-
-# Копируем бинарник из builder-контейнера
-COPY --from=builder /app/parser /usr/local/bin/parser
-
-# Запускаем приложение
-CMD ["parser"]
+CMD ["./parser"]
