--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -14,8 +14,10 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # User Service
     location /api/user {
-        proxy_pass http://user_service:8000/api/user;  # Обновлён host и порт
+        # TODO change port and service name as it is in docker-compose
+        proxy_pass http://user_service:8000/api/user;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -24,4 +26,56 @@ server {
         proxy_read_timeout 120s;
         proxy_connect_timeout 120s;
     }
+
+    # # Utils Service For Administrator
+    # location /api/admin {
+    #     # TODO change port and service name as it is in docker-compose
+    #     proxy_pass http://admin_service:8000/api/admin;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_read_timeout 120s;
+    #     proxy_connect_timeout 120s;
+    # }
+
+    # # Search Service
+    # location /api/search {
+    #     # TODO change port and service name as it is in docker-compose
+    #     proxy_pass http://search_service:8000/api/search;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_read_timeout 120s;
+    #     proxy_connect_timeout 120s;
+    # }
+
+    # # Review/Feedback Service
+    # location /api/review {
+    #     # TODO change port and service name as it is in docker-compose
+    #     proxy_pass http://review_service:8000/api/review;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_read_timeout 120s;
+    #     proxy_connect_timeout 120s;
+    # }
+
+    # # Media Service
+    # location /api/media {
+    #     # TODO change port and service name as it is in docker-compose
+    #     proxy_pass http://media_service:8000/api/media;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_read_timeout 120s;
+    #     proxy_connect_timeout 120s;
+    # }
 }
