--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
       - kafka_data_1:/var/lib/kafka/data
     networks:
       - app-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "kafka-topics.sh --list --bootstrap-server localhost:9092"]
       interval: 30s
@@ -109,6 +110,7 @@ services:
       - kafka_data_2:/var/lib/kafka/data
     networks:
       - app-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "kafka-topics.sh --list --bootstrap-server localhost:9092"]
       interval: 30s
