--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -27,18 +27,18 @@ server {
         proxy_connect_timeout 120s;
     }
 
-    # # Utils Service For Administrator
-    # location /api/admin {
-    #     # TODO change port and service name as it is in docker-compose
-    #     proxy_pass http://admin_service:8000/api/admin;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_read_timeout 120s;
-    #     proxy_connect_timeout 120s;
-    # }
+    # Utils Service For Administrator
+    location /api/admin {
+        # TODO change port and service name as it is in docker-compose
+        proxy_pass http://admin_service:8182;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 120s;
+        proxy_connect_timeout 120s;
+    }
 
     # # Search Service
     # location /api/search {
