Add gzip to optimize webpages loading

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,3 +1,10 @@
+
+gzip on;
+gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon application/javascript;
+gzip_min_length 100;   # minimum file size to compress
+gzip_comp_level 6;
+
+
 server {
     listen 80;
 
