--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+# git
 .github
-.vscode
 .git
+
+#IDE
+.vscode
+.idea
+
+#Nginx
 nginx/logs
 nginx/ssl
-.idea
+
+# Others
 build
