Fixed for k8s syntax in deployment.yml

--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -31,7 +31,7 @@ spec:
           subPath: nginx.conf
         - name: nginx-conf-d
           mountPath: /etc/nginx/conf.d
-        healthcheck:
+        livenessProbe:
           httpGet:
             path: /health
             port: 80
