--- a/parser-service/Dockerfile
+++ b/parser-service/Dockerfile
@@ -1,4 +1,5 @@
-FROM golang:1.24.1-alpine AS builder
+# Билд-этап (сборка бинарника)
+FROM golang:1.24.1 AS builder
 
 WORKDIR /app
 
@@ -7,14 +8,14 @@ RUN go mod download
 
 COPY . .
 
+# Сборка статически связанного бинарника
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o parser
 
+# Финальный образ
 FROM alpine:latest
 
 WORKDIR /root/
 
 COPY --from=builder /app/parser .
-
-EXPOSE 8080
 
 CMD ["./parser"]
