Workflow critical fix

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -5,11 +5,14 @@ on:
     branches:
       - master
   pull_request:
+    types: [closed]
     branches:
       - master
 
 jobs:
   build-and-push:
+    # Запускаем job только если это push или если PR был merged
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
