--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -8,6 +8,7 @@ on:
     types: [closed]
     branches:
       - master
+  workflow_dispatch: {}  # Добавляем ручной запуск
 
 jobs:
   build-and-push:
@@ -39,37 +40,29 @@ jobs:
 
       - name: Build and push Docker images
         run: |
-          # Получаем список всех директорий с Dockerfile
+          # Получаем список изменённых файлов из вывода предыдущего шага
+          CHANGED_FILES="${{ steps.changed-files.outputs.changed_files }}"
+
+          # Для каждой директории с Dockerfile
           for dir in $(find . -name 'Dockerfile' -exec dirname {} \;); do
             # Получаем относительный путь директории без ./
             dir_without_prefix=${dir#./}
-            
-            # Проверяем, были ли изменения в этой директории
-            CHANGED=false
-            for file in $(echo "${{ steps.changed-files.outputs.changed_files }}"); do
-              # Проверяем, начинается ли путь файла с имени директории
-              if [[ $file == $dir_without_prefix* ]]; then
-                CHANGED=true
-                break
-              fi
-            done
-            
-            # Если изменений не было, пропускаем сборку
-            if [ "$CHANGED" = false ]; then
-              echo "Пропускаем $dir - нет изменений"
-              continue
-            fi
             
             # Получаем имя директории и приводим его к нижнему регистру
             image_name=$(basename "$dir" | tr '[:upper:]' '[:lower:]')
             username="securitytrip"
             full_tag="ghcr.io/$username/$image_name:latest"
-            
-            echo "Обнаружены изменения в $dir"
-            echo "Сборка образа: $image_name"
-            echo "Полный тег: $full_tag"
-            
-            # Выполняем сборку и отправку образа
-            docker build -t "$full_tag" "$dir"
-            docker push "$full_tag"
+
+            # Если ручной запуск, строим всегда, иначе проверяем наличие изменений
+            if [ "$GITHUB_EVENT_NAME" = "workflow_dispatch" ] || echo "$CHANGED_FILES" | grep -q "$dir_without_prefix" ; then
+              echo "Сборка образа из директории $dir"
+              echo "Сборка образа: $image_name"
+              echo "Полный тег: $full_tag"
+              
+              # Выполняем сборку и отправку образа
+              docker build -t "$full_tag" "$dir"
+              docker push "$full_tag"
+            else
+              echo "Пропуск сборки для $dir, изменений не обнаружено"
+            fi
           done
