--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -1,3 +1,6 @@
+#########################################################
+# NGINX
+#########################################################
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,11 +22,11 @@ spec:
         image: ghcr.io/securitytrip/nginx:latest
         resources:
           limits:
-            cpu: "0.5"
-            memory: "512Mi"
-          requests:
             cpu: "0.2"
-            memory: "256Mi"
+            memory: "200Mi"
+          requests:
+            cpu: "0.1"
+            memory: "100Mi"
         ports:
         - containerPort: 80
         - containerPort: 443
@@ -47,6 +50,27 @@ spec:
         configMap:
           name: nginx-conf-d
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+    name: http
+  - port: 443
+    targetPort: 443
+    protocol: TCP
+    name: https
+  selector:
+    app: nginx
+#########################################################
+# FRONTEND
+#########################################################
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -68,11 +92,11 @@ spec:
         image: ghcr.io/securitytrip/frontend:latest
         resources:
           limits:
-            cpu: "0.5"
-            memory: "512Mi"
-          requests:
             cpu: "0.2"
-            memory: "256Mi"
+            memory: "200Mi"
+          requests:
+            cpu: "0.1"
+            memory: "100Mi"
         ports:
         - containerPort: 5173
         env:
@@ -80,6 +104,20 @@ spec:
           value: "production"
         - name: VITE_API_URL
           value: "http://nginx-service/api"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service
+spec:
+  ports:
+  - port: 5173
+    targetPort: 5173
+  selector:
+    app: frontend
+#########################################################
+# USER SERVICE
+#########################################################
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -102,11 +140,11 @@ spec:
         image: ghcr.io/securitytrip/user-service:latest
         resources:
           limits:
-            cpu: "0.5"
-            memory: "512Mi"
-          requests:
             cpu: "0.2"
-            memory: "256Mi"
+            memory: "200Mi"
+          requests:
+            cpu: "0.1"
+            memory: "100Mi"
         ports:
         - containerPort: 8000
         env:
@@ -124,6 +162,20 @@ spec:
             secretKeyRef:
               name: postgres-secret
               key: password
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: user-service-service
+spec:
+  ports:
+  - port: 8000
+    targetPort: 8000
+  selector:
+    app: user-service
+#########################################################
+# PARSER SERVICE
+#########################################################
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -146,11 +198,11 @@ spec:
         image: ghcr.io/securitytrip/parser-service:latest
         resources:
           limits:
-            cpu: "0.5"
-            memory: "512Mi"
-          requests:
             cpu: "0.2"
-            memory: "256Mi"
+            memory: "150Mi"
+          requests:
+            cpu: "0.1"
+            memory: "75Mi"
         env:
         - name: KAFKA_BROKER
           value: "kafka-1-service:29092"
@@ -160,6 +212,20 @@ spec:
           value: "1"
         - name: TOPIC
           value: "parsing"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: parser-service-service
+spec:
+  ports:
+  - port: 8080
+    targetPort: 8080
+  selector:
+    app: parser-service
+#########################################################
+# UTILS SERVICE
+#########################################################
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -182,11 +248,11 @@ spec:
         image: ghcr.io/securitytrip/utils-service:latest
         resources:
           limits:
-            cpu: "0.5"
-            memory: "512Mi"
-          requests:
             cpu: "0.2"
-            memory: "256Mi"
+            memory: "150Mi"
+          requests:
+            cpu: "0.1"
+            memory: "75Mi"
         ports:
         - containerPort: 8182
         env:
@@ -194,6 +260,20 @@ spec:
           value: "kafka-1-service:29092"
         - name: TOPIC
           value: "parsing"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: utils-service-service
+spec:
+  ports:
+  - port: 8182
+    targetPort: 8182
+  selector:
+    app: utils-service
+#########################################################
+# RATE CALCULATOR
+#########################################################
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -216,11 +296,11 @@ spec:
         image: ghcr.io/securitytrip/rate-calculator:latest
         resources:
           limits:
-            cpu: "0.5"
-            memory: "512Mi"
-          requests:
             cpu: "0.2"
-            memory: "256Mi"
+            memory: "150Mi"
+          requests:
+            cpu: "0.1"
+            memory: "75Mi"
         env:
         - name: KAFKA_BROKERS
           value: "kafka-1-service:29092,kafka-2-service:29093"
@@ -232,68 +312,6 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-    targetPort: 80
-    protocol: TCP
-    name: http
-  - port: 443
-    targetPort: 443
-    protocol: TCP
-    name: https
-  selector:
-    app: nginx
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-service
-spec:
-  ports:
-  - port: 5173
-    targetPort: 5173
-  selector:
-    app: frontend
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: user-service-service
-spec:
-  ports:
-  - port: 8000
-    targetPort: 8000
-  selector:
-    app: user-service
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: parser-service-service
-spec:
-  ports:
-  - port: 8080
-    targetPort: 8080
-  selector:
-    app: parser-service
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: utils-service-service
-spec:
-  ports:
-  - port: 8182
-    targetPort: 8182
-  selector:
-    app: utils-service
----
-apiVersion: v1
-kind: Service
-metadata:
   name: rate-calculator-service
 spec:
   ports:
@@ -301,3 +319,263 @@ spec:
     targetPort: 8080
   selector:
     app: rate-calculator
+#########################################################
+# POSTGRES
+#########################################################
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: postgres-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: postgres
+  template:
+    metadata:
+      labels:
+        app: postgres
+    spec:
+      containers:
+      - name: postgres
+        image: postgres:latest
+        env:
+        - name: POSTGRES_DB
+          value: "afisha_db"
+        - name: POSTGRES_USER
+          value: "admin"
+        - name: POSTGRES_PASSWORD
+          value: "admin123"
+        ports:
+        - containerPort: 5432
+        resources:
+          limits:
+            cpu: "0.2"
+            memory: "256Mi"
+          requests:
+            cpu: "0.1"
+            memory: "128Mi"
+      volumes:
+      - name: postgres-storage
+        emptyDir: {}  # для теста, в production используйте PVC
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-service
+spec:
+  ports:
+  - port: 5432
+    targetPort: 5432
+  selector:
+    app: postgres
+#########################################################
+# MONGODB
+#########################################################
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mongodb-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: mongodb
+  template:
+    metadata:
+      labels:
+        app: mongodb
+    spec:
+      containers:
+      - name: mongodb
+        image: mongo:latest
+        env:
+        - name: MONGO_INITDB_ROOT_USERNAME
+          value: "admin"
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          value: "admin123"
+        ports:
+        - containerPort: 27017
+        resources:
+          limits:
+            cpu: "0.2"
+            memory: "256Mi"
+          requests:
+            cpu: "0.1"
+            memory: "128Mi"
+      volumes:
+      - name: mongodb-storage
+        emptyDir: {}  # для теста
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb-service
+spec:
+  ports:
+  - port: 27017
+    targetPort: 27017
+  selector:
+    app: mongodb
+#########################################################
+# ZOOKEEPER
+#########################################################
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: zookeeper-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: zookeeper
+  template:
+    metadata:
+      labels:
+        app: zookeeper
+    spec:
+      containers:
+      - name: zookeeper
+        image: confluentinc/cp-zookeeper:latest
+        env:
+        - name: ZOOKEEPER_CLIENT_PORT
+          value: "2181"
+        - name: ZOOKEEPER_TICK_TIME
+          value: "2000"
+        ports:
+        - containerPort: 2181
+        resources:
+          limits:
+            cpu: "0.1"
+            memory: "128Mi"
+          requests:
+            cpu: "0.05"
+            memory: "64Mi"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zookeeper-service
+spec:
+  ports:
+  - port: 2181
+    targetPort: 2181
+  selector:
+    app: zookeeper
+#########################################################
+# KAFKA - экземпляр 1
+#########################################################
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: kafka-1-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: kafka-1
+  template:
+    metadata:
+      labels:
+        app: kafka-1
+    spec:
+      containers:
+      - name: kafka-1
+        image: confluentinc/cp-kafka:latest
+        env:
+        - name: KAFKA_BROKER_ID
+          value: "1"
+        - name: KAFKA_ZOOKEEPER_CONNECT
+          value: "zookeeper-service:2181"
+        - name: KAFKA_ADVERTISED_LISTENERS
+          value: "PLAINTEXT://kafka-1-service:29092,PLAINTEXT_HOST://localhost:9092"
+        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+          value: "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+        - name: KAFKA_INTER_BROKER_LISTENER_NAME
+          value: "PLAINTEXT"
+        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
+          value: "1"
+        ports:
+        - containerPort: 29092
+        resources:
+          limits:
+            cpu: "0.2"
+            memory: "256Mi"
+          requests:
+            cpu: "0.1"
+            memory: "128Mi"
+      volumes:
+      - name: kafka1-storage
+        emptyDir: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-1-service
+spec:
+  ports:
+  - port: 29092
+    targetPort: 29092
+  selector:
+    app: kafka-1
+#########################################################
+# KAFKA - экземпляр 2
+#########################################################
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: kafka-2-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: kafka-2
+  template:
+    metadata:
+      labels:
+        app: kafka-2
+    spec:
+      containers:
+      - name: kafka-2
+        image: confluentinc/cp-kafka:latest
+        env:
+        - name: KAFKA_BROKER_ID
+          value: "2"
+        - name: KAFKA_ZOOKEEPER_CONNECT
+          value: "zookeeper-service:2181"
+        - name: KAFKA_ADVERTISED_LISTENERS
+          value: "PLAINTEXT://kafka-2-service:29093,PLAINTEXT_HOST://localhost:9093"
+        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+          value: "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+        - name: KAFKA_INTER_BROKER_LISTENER_NAME
+          value: "PLAINTEXT"
+        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
+          value: "1"
+        ports:
+        - containerPort: 29093
+        resources:
+          limits:
+            cpu: "0.2"
+            memory: "256Mi"
+          requests:
+            cpu: "0.1"
+            memory: "128Mi"
+      volumes:
+      - name: kafka2-storage
+        emptyDir: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-2-service
+spec:
+  ports:
+  - port: 29093
+    targetPort: 29093
+  selector:
+    app: kafka-2
