--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -344,9 +344,15 @@ spec:
         - name: POSTGRES_DB
           value: "afisha_db"
         - name: POSTGRES_USER
-          value: "admin"
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: username
         - name: POSTGRES_PASSWORD
-          value: "admin123"
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: password
         ports:
         - containerPort: 5432
         resources:
@@ -393,9 +399,15 @@ spec:
         image: mongo:latest
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
-          value: "admin"
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: username
         - name: MONGO_INITDB_ROOT_PASSWORD
-          value: "admin123"
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: password
         ports:
         - containerPort: 27017
         resources:
