--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,41 +26,24 @@ jobs:
           echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
           chmod 600 $HOME/.kube/config
 
-      - name: Check and Create Deployments
+      - name: Apply Kubernetes manifests
         run: |
-          # Проверяем существование deployment.yml
-          if [ ! -f kubernetes/deployment.yml ]; then
-            echo "Error: deployment.yml not found!"
-            exit 1
-          fi
-          
-          # Получаем список существующих деплойментов
-          existing_deployments=$(kubectl get deployments -o name)
-          
-          # Если деплойментов нет, применяем весь файл конфигурации
-          if [ -z "$existing_deployments" ]; then
-            echo "No deployments found. Applying full configuration..."
-            kubectl apply -f kubernetes/deployment.yml
-          fi
+          echo "Applying all manifests from the kubernetes folder..."
+          kubectl apply -f kubernetes/ --recursive
 
       - name: Update Images in Deployments
         run: |
-          # Обновляем образы для каждого сервиса из build-push
-          for dir in $(find . -name 'Dockerfile' -exec dirname {} \;); do
+          # Обновляем образы для каждого сервиса, находящегося в Dockerfile
+          for dir in $(find . -name 'Dockerfile' -exec dirname {} \; | sort | uniq); do
             image_name=$(basename "$dir" | tr '[:upper:]' '[:lower:]')
             full_tag="ghcr.io/securitytrip/${image_name}:latest"
-            
-            echo "Updating deployment for $image_name with image $full_tag"
-            
-            # Проверяем существование деплоймента
-            if kubectl get deployment/${image_name}-deployment &>/dev/null; then
-              # Обновляем образ
-              kubectl set image deployment/${image_name}-deployment ${image_name}=${full_tag} --record
-              
-              # Ждем успешного обновления
-              kubectl rollout status deployment/${image_name}-deployment
+            deployment_name="${image_name}-deployment"
+            echo "Updating deployment for ${deployment_name} with image ${full_tag}"
+            if kubectl get deployment/${deployment_name} &>/dev/null; then
+              kubectl set image deployment/${deployment_name} ${image_name}=${full_tag} --record
+              kubectl rollout status deployment/${deployment_name} --timeout=300s
             else
-              echo "Warning: Deployment ${image_name}-deployment not found"
+              echo "Warning: Deployment ${deployment_name} not found"
             fi
           done
 
@@ -68,10 +51,7 @@ jobs:
         run: |
           echo "Verifying all deployments..."
           kubectl get deployments
-          
-          # Проверяем статус всех деплойментов
           deployments=("nginx" "frontend" "user-service" "parser-service" "utils-service" "rate-calculator")
-          
           for dep in "${deployments[@]}"; do
             echo "Checking status of ${dep}-deployment..."
             if ! kubectl rollout status deployment/${dep}-deployment --timeout=300s; then
