--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -14,7 +14,7 @@ data:
 
         # Frontend
         location / {
-            proxy_pass http://frontend:5173;
+            proxy_pass http://frontend-service:5173;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -27,7 +27,7 @@ data:
 
         # User Service
         location /api/user {
-            proxy_pass http://user-service:8000/api/user;
+            proxy_pass http://user-service-service:8000/api/user;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -39,7 +39,7 @@ data:
 
         # Utils Service For Administrator
         location /api/admin {
-            proxy_pass http://admin-service:8182;
+            proxy_pass http://utils-service-service:8182;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
