--- a/kubernetes/kafka-1-deployment.yml
+++ b/kubernetes/kafka-1-deployment.yml
@@ -34,11 +34,11 @@ spec:
         - containerPort: 29092
         resources:
           limits:
+            cpu: "1"
+            memory: "1Gi"
+          requests:
             cpu: "0.5"
             memory: "512Mi"
-          requests:
-            cpu: "0.2"
-            memory: "256Mi"
         volumeMounts:
         - name: kafka1-storage
           mountPath: /var/lib/kafka/data
