--- a/kubernetes/frontend-deployment.yml
+++ b/kubernetes/frontend-deployment.yml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: frontend
         image: ghcr.io/securitytrip/frontend:latest
+        imagePullPolicy: Always
         resources:
           limits:
             cpu: "0.2"
