--- a/kubernetes/user-service-deployment.yml
+++ b/kubernetes/user-service-deployment.yml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: user-service
         image: ghcr.io/securitytrip/user-service:latest
+        imagePullPolicy: Always
         resources:
           limits:
             cpu: "0.2"
