--- a/kubernetes/kafka-service.yml
+++ b/kubernetes/kafka-service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kafka-1-service
+  name: kafka-service
 spec:
   ports:
   - port: 29092
     targetPort: 29092
   selector:
-    app: kafka-1
+    app: kafka
