--- a/kubernetes/parser-service-deployment.yml
+++ b/kubernetes/parser-service-deployment.yml
@@ -27,7 +27,7 @@ spec:
             memory: "25Mi"
         env:
         - name: KAFKA_BROKER
-          value: "kafka-1-service:29092"
+          value: "kafka-service:29092"
         - name: MONGO_URI
           value: "mongodb://admin:admin123@mongodb-service:27017"
         - name: GROUP_ID
