--- a/kubernetes/redis-deployment.yaml
+++ b/kubernetes/redis-deployment.yaml
@@ -22,10 +22,10 @@ spec:
         resources:
           requests:
             memory: "64Mi"
-            cpu: "250m"
+            cpu: "200m"    # снижено с 250m
           limits:
             memory: "128Mi"
-            cpu: "500m"
+            cpu: "400m"    # снижено с 500m
         livenessProbe:
           tcpSocket:
             port: 6379
