--- a/kubernetes/kibana-deployment.yml
+++ b/kubernetes/kibana-deployment.yml
@@ -23,7 +23,7 @@ spec:
         resources:
           requests:
             memory: "256Mi"
-            cpu: "200m"    # снижено с 250m
+            cpu: "0.2"    # снижено с 250m
           limits:
             memory: "512Mi"
-            cpu: "400m"    # снижено с 500m
+            cpu: "0.3"    # снижено с 500m
