--- a/kubernetes/kibana-deployment.yml
+++ b/kubernetes/kibana-deployment.yml
@@ -17,13 +17,13 @@ spec:
         image: docker.elastic.co/kibana/kibana:8.17
         env:
         - name: ELASTICSEARCH_URL
-          value: "http://elasticsearch-service:9200"  # имя сервиса Elasticsearch
+          value: "http://elasticsearch-service:9200"
         ports:
         - containerPort: 5601
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "0.2"    # снижено с 250m
+            memory: "128Mi"
+            cpu: "100m"
           limits:
-            memory: "512Mi"
-            cpu: "0.3"    # снижено с 500m
+            memory: "256Mi"
+            cpu: "150m"
