--- a/kubernetes/mongodb-deployment.yml
+++ b/kubernetes/mongodb-deployment.yml
@@ -29,15 +29,15 @@ spec:
         ports:
         - containerPort: 27017
         resources:
-          limits:
-            cpu: "0.2"
-            memory: "256Mi"
           requests:
-            cpu: "0.1"
-            memory: "128Mi"
+            memory: "100Mi"
+            cpu: "50m"
+          limits:
+            memory: "200Mi"
+            cpu: "100m"
         volumeMounts:
         - name: mongodb-storage
           mountPath: /data/db
       volumes:
       - name: mongodb-storage
-        emptyDir: {}  # для теста
+        emptyDir: {}
