--- a/kubernetes/postgres-deployment.yml
+++ b/kubernetes/postgres-deployment.yml
@@ -31,15 +31,15 @@ spec:
         ports:
         - containerPort: 5432
         resources:
-          limits:
-            cpu: "0.2"
-            memory: "256Mi"
           requests:
-            cpu: "0.1"
+            memory: "64Mi"
+            cpu: "50m"
+          limits:
             memory: "128Mi"
+            cpu: "100m"
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
       volumes:
       - name: postgres-storage
-        emptyDir: {}  # для теста, в production используйте PVC
+        emptyDir: {}
