--- a/kubernetes/redis-deployment.yaml
+++ b/kubernetes/redis-deployment.yaml
@@ -21,11 +21,11 @@ spec:
         - containerPort: 6379
         resources:
           requests:
-            memory: "64Mi"
-            cpu: "0.2"
+            memory: "50Mi"
+            cpu: "50m"
           limits:
-            memory: "128Mi"
-            cpu: "0.3"
+            memory: "100Mi"
+            cpu: "75m"
         livenessProbe:
           tcpSocket:
             port: 6379
