--- a/kubernetes/zookeeper-deployment.yml
+++ b/kubernetes/zookeeper-deployment.yml
@@ -23,9 +23,9 @@ spec:
         ports:
         - containerPort: 2181
         resources:
-          limits:
-            cpu: "0.1"
-            memory: "128Mi"
           requests:
-            cpu: "0.05"
-            memory: "64Mi"
+            memory: "50Mi"
+            cpu: "25m"
+          limits:
+            memory: "100Mi"
+            cpu: "50m"
