--- a/kubernetes/organizer-frontend-service.yml
+++ b/kubernetes/organizer-frontend-service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: org-frontend-service
+  name: organizer-frontend-service
 spec:
   ports:
   - port: 5174
     targetPort: 5174
   selector:
-    app: org-frontend
+    app: organizer-frontend
