--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
 version: '3.8'
 
 services:
+  # Добавляем API Gateway
+  api-gateway:
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    ports:
+      - "8090:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - JWT_SECRET=SecretKey
+    networks:
+      - app-network
+    depends_on:
+      - user_service
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
   nginx:
     image: nginx:latest
     ports:
@@ -22,6 +43,10 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    # Добавляем зависимость от api-gateway
+    depends_on:
+      - api-gateway
+      - frontend
 
   postgres:
     image: postgres:latest
@@ -143,8 +168,6 @@ services:
       - /app/node_modules
     networks:
       - app-network
-    depends_on:
-      - nginx
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://localhost:5173"]
       interval: 10s
