--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,4 +1,3 @@
-
 gzip on;
 gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon application/javascript;
 gzip_min_length 100;   # minimum file size to compress
@@ -8,7 +7,7 @@ gzip_comp_level 6;
 server {
     listen 80;
 
-    # frontend
+    # Frontend
     location / {
         proxy_pass http://frontend:5173;
         proxy_http_version 1.1;
@@ -21,10 +20,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # User Service
-    location /api/user {
-        # TODO change port and service name as it is in docker-compose
-        proxy_pass http://user_service:8000/api/user;
+    # API Gateway
+    location /api/ {
+        proxy_pass http://api-gateway:8080/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -34,18 +32,45 @@ server {
         proxy_connect_timeout 120s;
     }
 
+    # Авторизация
+    location /auth/ {
+        proxy_pass http://api-gateway:8080/auth/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 120s;
+        proxy_connect_timeout 120s;
+    }
 
-    # # Review/Feedback Service
-    # location /api/review {
-    #     # TODO change port and service name as it is in docker-compose
-    #     proxy_pass http://review_service:8000/api/review;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_read_timeout 120s;
-    #     proxy_connect_timeout 120s;
-    # }
+    # Swagger UI
+    location /swagger-ui/ {
+        proxy_pass http://api-gateway:8080/swagger-ui/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
+    # API Docs
+    location /api-docs/ {
+        proxy_pass http://api-gateway:8080/api-docs/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Actuator
+    location /actuator/ {
+        proxy_pass http://api-gateway:8080/actuator/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
